# novel-exporter

./: .gitignore  README.md  exporter.py  models.py  pyproject.toml
.github/workflows/: tests.yml
exporters/: __init__.py  base.py  epub.py  pdf.py  txt.py
scrapers/: __init__.py  base.py  kakuyomu.py  syosetsu.py
tests/: conftest.py  test_network.py  test_parsers.py
tests/fixtures/: chapter_page.html  single_chapter.html  toc_page.html
